version/2.1/_sources/examples/gallery_examples/03-exporting/export_all_test_points.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\03-exporting\export_all_test_points.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_03-exporting_export_all_test_points.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_03-exporting_export_all_test_points.py:


.. _ref_sherlock_export_test_points:

======================
Export All Test Points
======================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and export all test points for a CCA.

Description
-----------
Sherlock's gRPC API enables users to automate various workflows, including exporting all
test points for a CCA.
This script demonstrates how to:

- Connect to the Sherlock service.
- Import a tutorial project.
- Export all test points to a CSV file.

.. GENERATED FROM PYTHON SOURCE LINES 45-57

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path, get_temp_dir

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import (
        SherlockExportAllTestPointsError,
        SherlockImportProjectZipArchiveError,
    )








.. GENERATED FROM PYTHON SOURCE LINES 59-62

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 62-65

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\examples\03-exporting\export_all_test_points.py", line 63, in <module>
        sherlock = launcher.connect(port=9092, timeout=10)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 324, in connect
        raise e
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 298, in connect
        channel = _connect_grpc_channel(
            host=LOCALHOST,
        ...<4 lines>...
            certs_dir=certs_dir,
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 369, in _connect_grpc_channel
        channel = create_channel(
            transport_mode=transport_mode,
        ...<9 lines>...
            ],
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 149, in create_channel
        return create_mtls_channel(host, port, certs_dir, cert_files, grpc_options)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 364, in create_mtls_channel
        raise FileNotFoundError(error_message) from e
    FileNotFoundError: Certificate file not found: certs\ca.crt. Ensure that the certificates are present in the 'certs' folder or set the 'ANSYS_GRPC_CERTIFICATES' environment variable.




.. GENERATED FROM PYTHON SOURCE LINES 66-69

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 69-76

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 77-80

Import Tutorial Project
=======================
Import the tutorial project zip archive provided with the Sherlock installation.

.. GENERATED FROM PYTHON SOURCE LINES 80-91

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Tutorial Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project zip archive: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 92-95

Export All Test Points
======================
Export all test points for the "Main Board" to a CSV file.

.. GENERATED FROM PYTHON SOURCE LINES 95-109

.. code-block:: Python


    try:
        test_points_export_path = os.path.join(get_temp_dir(), "TestPointsExport.csv")
        sherlock.layer.export_all_test_points(
            project="Test",
            cca_name="Main Board",
            export_file=test_points_export_path,
            length_units="DEFAULT",
            displacement_units="DEFAULT",
            force_units="DEFAULT",
        )
        print(f"All test points exported successfully to: {test_points_export_path}")
    except SherlockExportAllTestPointsError as e:
        print(f"Error exporting all test points: {e}")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.005 seconds)


.. _sphx_glr_download_examples_gallery_examples_03-exporting_export_all_test_points.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: export_all_test_points.ipynb <export_all_test_points.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: export_all_test_points.py <export_all_test_points.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: export_all_test_points.zip <export_all_test_points.zip>`
